<resources>
    <string name="app_name">SoldeTracker</string>
    <string name="login_prompt">Login to your account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="Cpw">Confirm Password</string>
    <string name="Remember_me">Remember me</string>
    <string name="Forgot_password">Forgot password ?</string>
    <string name="Sign_in">Sign in</string>
    <string name="or">Or sign in with</string>
    <string name="or_s_up">Or sign up with</string>
    <string name="google">Connect with google</string>
    <string name="account">Don\'t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_prompt">Create your account</string>
    <string name="thank_you">Thank you for your registration</string>
    <string name="email_check">Please check your email for a text message with your code. Your code is 6 characters long.</string>
    <string name="recever">We sent your code to:</string>
    <string name="resend_code">Resend the code</string>
    <string name="next">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="exp">moussanouralhouda@gmail.com</string>
    <string name="find">Find your account</string>
    <string name="please">Please enter your email to search for your account.</string>
    <string name="search">Search</string>
    <string name="new_passwor">New Password</string>
    <string name="textNPW">Enter new password and confirm</string>
    <string name="CPW">Change password</string>
    <string name="SC">Enter the security code</string>
    <string name="Profile">Profile</string>
    <string name="welcome">Welcome</string>
    <string name="expname">Nour Elhouda Moussa</string>
    <string name="phone">Mobile</string>
    <string name="phonenumber">+216 25728023</string>
    <string name="pwd_exp">*********</string>
    <string name="edit_Profile">Edit Profile</string>
    <string name="confirm">Confirm</string>
</resources>