<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/logo"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">


        </FrameLayout>

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/imprima"
            android:text="@string/login_prompt"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextTextEmailAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:autofillHints="emailAddress"
            android:fontFamily="@font/imprima"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHighlight="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="15sp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/green"
            app:cursorColor="@color/green"
            app:endIconTint="@color/green"
            app:hintTextColor="@color/green"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:textColorLink="@color/green" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:autofillHints="password"
            android:fontFamily="@font/imprima"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHighlight="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="15sp"

            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/green"
            app:cursorColor="@color/green"
            app:endIconTint="@color/green"
            app:hintTextColor="@color/green"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:textColorLink="@color/green" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <CheckBox
                android:id="@+id/Remember_me"
                android:layout_width="150dp"
                android:layout_height="match_parent"



                android:fontFamily="@font/imprima"
                android:text="@string/Remember_me"

                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/imprima"
                    android:paddingTop="15dp"
                    android:text="@string/Forgot_password"
                    android:textColor="@color/green"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/sign_in"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/imprima"
            android:text="@string/Sign_in"
            android:textSize="20sp"
            app:cornerRadius="15dp" />

        <TextView
            android:id="@+id/Or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/imprima"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Google"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/gray"
            android:bufferType="normal"
            android:fontFamily="@font/imprima"
            android:text="@string/google"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/imprima"
                android:paddingTop="14dp"
                android:text="@string/account"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/Sign_up"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/imprima"
                android:paddingTop="14dp"
                android:text="@string/sign_up"
                android:textColor="@color/green"
                android:textSize="17sp" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>