<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpConfirmationActivity">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <FrameLayout
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:layout_gravity="center"

                android:background="@drawable/logo"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible">


            </FrameLayout>

        </FrameLayout>



        <TextView
            android:id="@+id/text_ThankYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/imprima"
            android:text="@string/thank_you"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/text_CheckEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/imprima"
            android:text="@string/email_check"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/text_SentEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:fontFamily="@font/imprima"
            android:text="@string/recever"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/text_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/imprima"
            android:text="@string/exp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextcode"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/imprima"
            android:hint="Code"
            android:inputType="text"
            android:textColorHighlight="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="15sp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/green"
            app:cursorColor="@color/green"
            app:endIconTint="@color/green"
            app:hintTextColor="@color/green"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/code_edit_text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:textColorLink="@color/green" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/imprima"

                    android:text="@string/resend_code"
                    android:textColor="@color/green"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>
        <Button
            android:id="@+id/continueBTN"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/imprima"
            android:text="@string/next"
            android:textSize="20sp"
            app:cornerRadius="15dp" />


        <Button
            android:id="@+id/cancelBTN"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/imprima"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="15dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>