<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindAccountActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fadeScrollbars="false"

        android:isScrollContainer="false"
        android:nestedScrollingEnabled="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <FrameLayout
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:layout_gravity="center"

                android:background="@drawable/logo"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible">


            </FrameLayout>

        </FrameLayout>


        <TextView
            android:id="@+id/text_find_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/imprima"
            android:text="@string/find"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text_please_enter_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/imprima"
            android:text="@string/please"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextTextEmailAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:autofillHints="emailAddress"
            android:fontFamily="@font/imprima"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHighlight="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="15sp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/green"
            app:cursorColor="@color/green"
            app:endIconTint="@color/green"
            app:hintTextColor="@color/green"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:textColorLink="@color/green" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/search"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/imprima"
            android:text="@string/search"
            android:textSize="20sp"
            app:cornerRadius="15dp" />



        <Button
            android:id="@+id/cancel"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/imprima"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="15dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>